--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://webchat.woztell.com/sdk.js"></script>
 </head>
 <body>
-  <script>
+<script>
 WoztellWebchat.init({
   version: "1.0",
   token: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJXQkMiLCJ0eXBlIjoiZGVmYXVsdFRva2VuIiwiYmlkIjoiNjY1MDlhZjViNDZkYzAzZTJhYmEwN2JmIiwianRpIjoiOGU1M2U1MGQtZDNmZC01NGRjLTk5ZGItNWEwNWRkNDFlNzM2In0.mbFs8rlUqxlgoBea9xl34G8R2OVmOVC3gKyu07YKQHo"
 },{"defaultOpen":false,"loadDelay":0})
-
+</script>
 </body>
 </html>
